--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
     </div>
 </div>
 </div>
+<span>Open Source Code<a href="https://github.com/lindyscodes/weather-app-lindycodes">Here</a></span>
 </div> 
  <script
  src="https://kit.fontawesome.com/7ab1649706.js"
