--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
 </div>
 <br>
 <br>
+<div></div>
 <span>Open Source Code <a href="https://github.com/lindyscodes/weather-app-lindycodes">Here 🌻</a></span>
 </div> 
  <script
