--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 <br>
 <br>
 <div></div>
-<span>Open Source Code <a href="https://github.com/lindyscodes/weather-app-lindycodes">Here 🌻</a></span>
+<div>Open Source Code <a href="https://github.com/lindyscodes/weather-app-lindycodes">Here 🌻</a></div>
 </div> 
  <script
  src="https://kit.fontawesome.com/7ab1649706.js"
