--- a/index.html
+++ b/index.html
@@ -117,8 +117,9 @@
 </div>
 <br>
 <br>
-<div></div>
+<div>
 <div>Open Source Code <a href="https://github.com/lindyscodes/weather-app-lindycodes">Here 🌻</a></div>
+</div>
 </div> 
  <script
  src="https://kit.fontawesome.com/7ab1649706.js"
