--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 </div>
 <br>
 <br>
-<div>
+<div class="padded-div">
 <div class="padded-div">Open Source Code <a href="https://github.com/lindyscodes/weather-app-lindycodes">Here 🌻</a></div>
 </div>
 </div> 
