--- a/index.html
+++ b/index.html
@@ -117,9 +117,10 @@
 </div>
 <br>
 <br>
-<div class="padded-div">
+<div>
 <div class="padded-div">Open Source Code <a href="https://github.com/lindyscodes/weather-app-lindycodes">Here 🌻</a></div>
 </div>
+<br>
 </div> 
  <script
  src="https://kit.fontawesome.com/7ab1649706.js"
