--- a/index.html
+++ b/index.html
@@ -127,6 +127,6 @@
 >
 </script>
 <div></div>
-<p><small>Coded by Lindy G.</small></p>
+<span><small>Coded by Lindy G.</small></span>
 </body>
 </html>
