Slight editing still to style that ending div section with link

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 <br>
 <br>
 <div>
-<div class="padded-div">Open Source Code <a href="https://github.com/lindyscodes/weather-app-lindycodes">Here 🌻</a></div>
+<div class="edit-div">Open Source Code <a href="https://github.com/lindyscodes/weather-app-lindycodes">Here 🌻</a></div>
 </div>
 </div> 
  <script
