--- a/index.html
+++ b/index.html
@@ -112,6 +112,13 @@
         It's raining today!
       </div>
     </div>
+    <div class="col weekday"><b>Sunday</b>
+      <div class="col">
+        <i class="fa fa-sun-o fa" aria-hidden="true"></i>
+        <br>
+        It's raining today!
+      </div>
+    </div>
     </div>
 </div>
 </div>
