Starting to fix JS, testing Fahrenheit link

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <div class="col"><span><h1 id="initialTemp">
         <br>
         <i class="fa-regular fa-sun fa-spin today-sun" style="--fa-animation-duration: 30s"></i>
-<span class="local-temp-in-time">60°</span>
+<span class="local-temp-in-time" id="fahrenheit-link">60°</span>
       </span>
     <span><a href="#" id="fahrenheit">F</a></span>
     <span><a href="#" id="celcius">C</a></span></div>
