Fixed CSS and JS to report weather, changed bg

--- a/index.html
+++ b/index.html
@@ -44,22 +44,24 @@
 			</h2>
       <div class="col"><span><h1 id="initialTemp">
         <br>
-        <i class="fa-regular fa-sun fa-spin today-sun" style="--fa-animation-duration: 30s"></i>
-<span class="local-temp-in-time" id="fahrenheit-link">60°</span>
+        <img src="http://openweathermap.org/img/wn/@2x.png" id="weather-icon">
+<span class="local-temp-in-time">60°</span>
       </span>
-    <span><a href="#" id="fahrenheit">F</a></span>
-    <span><a href="#" id="celcius">C</a></span></div>
+    <span><a href="#" id="f-link">F</a></span>
+    <span><a href="#" id="c-link">C</a></span></div>
   </div>
 <br>
 <div class="row termsAndConditions">
   <div class="col-4"><b class="boldedTitles">Humidity</b>
-    <div class="col" id="humidity">It's humid!</div>
+    %
+    <div class="col" id="humidity">Humidity here</div>
   </div>
       <div class="col-4"><b class="boldedTitles">Wind Speed</b>
-      <div class="col" id="wind">Sunny, mild, foggy</div>
+        %
+      <div class="col" id="wind">Wind speed here</div>
     </div>
     <div class="col-4"><b class="boldedTitles">Conditions</b>
-      <div class="col" id="conditions">Wear a <em>sweater!</em></div>
+      <div class="col" id="conditions">Conditions here <em>sweater!</em></div>
     </div>
 </div>
 <br>
@@ -117,6 +119,7 @@
 <br>
 <br>
 <div>
+  <hr>
 <div class="padded-div">Open Source Code <a href="https://github.com/lindyscodes/weather-app-lindycodes">Here 🌻</a></div>
 </div>
 </div> 
