--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <div class="col"><span><h1 id="initialTemp">
         <br>
         <img src="http://openweathermap.org/img/wn/@2x.png" id="weather-icon">
-<span class="local-temp-in-time">60°</span>
+<span class="local-temp-in-time" id="main-temperature"">60°</span>
       </span>
     <span><a href="#" id="f-link">F</a></span>
     <span><a href="#" id="c-link">C</a></span></div>
