--- a/index.html
+++ b/index.html
@@ -52,18 +52,71 @@
   </div>
 <br>
 <div class="row termsAndConditions">
-  <div class="col-4"><b class="boldedTitles">Humidity 💦</b>
+  <div class="col-4"><b class="boldedTitles">Humidity</b>
+    %
     <div class="col" id="humidity">Humidity here</div>
   </div>
-      <div class="col-4"><b class="boldedTitles">Wind Speed 💨</b>
+      <div class="col-4"><b class="boldedTitles">Wind Speed</b>
+        %
       <div class="col" id="wind">Wind speed here</div>
     </div>
-    <div class="col-4"><b class="boldedTitles">Conditions 🌎</b>
+    <div class="col-4"><b class="boldedTitles">Conditions</b>
       <div class="col" id="conditions">Conditions here <em>sweater!</em></div>
     </div>
 </div>
-<!--removed columns, optional insert-->
+<br>
+<br>
+<div class="weatherForecast">
+    <div class="row">
+    <div class="col weekday"><b>Monday</b>
+      <div class="col">
+        <img src="http://openweathermap.org/img/wn/02d@2x.png">
+        <br>
+        It is <em>sunny!</em>
+        </div>
+      </div>
+    <div class="col weekday"><b>Tuesday</b>
+      <div class="col">
+        <img src="http://openweathermap.org/img/wn/02d@2x.png">
+      <br>
+        Going to be <em>cloudy!</em></div>
+    </div>
+    <div class="col weekday"><b>Wednesday</b>
+      <div class="col">
+        <img src="http://openweathermap.org/img/wn/02d@2x.png">        
+        <br>
+        Lots of <em>sun!</em></div>
+    </div>
+    <div class="col weekday"><b>Thursday</b>
+      <div class="col">
+        <img src="http://openweathermap.org/img/wn/02d@2x.png">
+        <br>
+        Wear a <em>sweater!</em></div>
+    </div>
+    <div class="col weekday"><b>Friday</b>
+      <div class="col">
+        <img src="http://openweathermap.org/img/wn/02d@2x.png">
+        <br>
+        <em>Happy Friday!</em></div>
+    </div>
+    <div class="col weekday"><b>Saturday</b>
+      <div class="col">
+        <img src="http://openweathermap.org/img/wn/02d@2x.png">
+        <br>
+        It's foggy today!</div>
+    </div>
+    <div class="col weekday"><b>Sunday</b>
+      <div class="col">
+        <img src="http://openweathermap.org/img/wn/02d@2x.png"> 
+        <br>
+        It's raining today!
+      </div>
+    </div>
+    </div>
 </div>
+</div>
+<br>
+<br>
 <div>
   <hr>
 <div class="padded-div">Open Source Code <a href="https://github.com/lindyscodes/weather-app-lindycodes">Here 🌻</a></div>
