Cleaned up a lot of the JS and HTML, trying to fix formatting and functions

--- a/extra copy of project/index.html
+++ b/extra copy of project/index.html
@@ -50,14 +50,33 @@
     <span><a href="#" id="f-link">F</a></span>
     <span><a href="#" id="c-link">C</a></span></div>
   </div>
-<div class="row termsAndConditions">  
-  <div class="col-6">
+
+<div class="row termsAndConditions">
+
+<!--test-->
+
+<div class="col-6 boldedTitles">
   <ul>
     <li>Humidity: <span id="humidity"></span>%</li>
     <li>Wind: <span id="wind"></span> km/h</li>
-    <li>Conditions: <span id="conditions"></span><span> ⛅️</span></li>
   </ul>
 </div>
+</div>
+<!--
+  <div class="col-4"><b class="boldedTitles">Humidity</b>
+    %
+    <div class="col" id="humidity">Humidity here</div>
+  </div>
+      <div class="col-4"><b class="boldedTitles">Wind Speed</b>
+        %
+      <div class="col" id="wind">Wind speed here</div>
+    </div>
+    <div class="col-4"><b class="boldedTitles">Conditions</b>
+      <div class="col" id="conditions">Conditions here <em>sweater!</em></div>
+    </div>
+
+-->
+
 </div>
 <br>
 <br>
@@ -117,6 +136,12 @@
 <div class="padded-div">Open Source Code <a href="https://github.com/lindyscodes/weather-app-lindycodes">Here 🌻</a></div>
 </div>
 </div> 
+ <script
+ src="https://kit.fontawesome.com/7ab1649706.js"
+ crossorigin="anonymous"
+>
+</script>
+<div></div>
 <span><small>Coded by Lindy G.</small></span>
 <script type="text/javascript" src="script.js"></script>
 </body>
