Had to rework, removed forecast for now. Cleaned up CSS. Finalized project. Tested capability.

--- a/index.html
+++ b/index.html
@@ -45,23 +45,23 @@
       <div class="col"><span><h1 id="initialTemp">
         <br>
         <img src="http://openweathermap.org/img/wn/@2x.png" id="weather-icon">
-<span class="local-temp-in-time" id="main-temperature"">60°</span>
+<span class="local-temp-in-time" id="main-temperature"">12°</span>
       </span>
+    <span><a href="#" id="c-link">C</a></span>
     <span><a href="#" id="f-link">F</a></span>
-    <span><a href="#" id="c-link">C</a></span></div>
+  </div>
   </div>
 <div class="row termsAndConditions">  
   <div class="col-6">
   <ul>
     <li>Humidity: <span id="humidity"></span>%</li>
     <li>Wind: <span id="wind"></span> km/h</li>
-    <li>Conditions: <span id="conditions"></span><span> ⛅️</span></li>
+    <li>Conditions: <span id="conditions"></span><span> 🌈</span></li>
   </ul>
 </div>
 </div>
-<br>
-<br>
-<div class="weatherForecast" id="big-weather-forecast">
+<!--Removed for now, can complete later.
+<div class="weatherForecast" id="forecast">
     <div class="row">
     <div class="col weekday"><b>Monday</b>
       <div class="col">
@@ -108,16 +108,16 @@
       </div>
     </div>
     </div>
+    -->
 </div>
 </div>
-<br>
-<br>
 <div>
   <hr>
 <div class="padded-div">Open Source Code <a href="https://github.com/lindyscodes/weather-app-lindycodes">Here 🌻</a></div>
 </div>
 </div> 
-<span><small>Coded by Lindy G.</small></span>
+<br>
+<span class="end-credits"><small>Coded by Lindy G.</small></span>
 <script type="text/javascript" src="script.js"></script>
 </body>
 </html>
