Brief updates, trying to fix some for mobile use, testing on phone

--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
 <div class="row termsAndConditions">  
   <div class="col-6">
   <ul>
-    <li>Humidity: <span id="humidity"></span>%</li>
-    <li>Wind: <span id="wind"></span> km/h</li>
-    <li>Conditions: <span id="conditions"></span><span> 🌈</span></li>
+    <li><b>Humidity: </b><span id="humidity"></span>%</li>
+    <li><b>Wind: </b><span id="wind"></span> km/h</li>
+    <li><b>Conditions: </b><span id="conditions"></span><span> 🌈</span></li>
   </ul>
 </div>
 </div>
